# spotify-minimal-client

./: README.md  requirements.txt  setup.cfg
src/spotify_minimal_client/: __init__.py  album.py  artist.py  client.py  copyright.py  exceptions.py  image.py  markets.py  restrictions.py  spotify.py  track.py
