[metadata]
name = spotify-minimal-client
platforms = unix, linux, osx
classifiers = 
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    spotify_minimal_client
install_requires =
    requests>=2.28
    pydantic>=1.10
python_requires = >=3.10
package_dir =
    =src
zip_safe = no
